--- a/index.html
+++ b/index.html
@@ -6,31 +6,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--google analytics header code start here-->
+    
+
+
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-5WJQFBC7');
-    </script>
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-PGLN5G4L');</script>
     <!-- End Google Tag Manager -->
-     
-    <!--google analyrics header code ended here-->
 
-    <!---tag coding start here--->
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8QX9GHNJNK"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-08CD39S0HD"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-8QX9GHNJNK');
+    gtag('config', 'G-08CD39S0HD');
     </script>
-    <!---tag coding ended here--->
+    <!---google analyics header code ended here--->
     <title>Learning Google Analytics Tingy</title>
 </head>
 <body>
+
     <div class="container-fluid hero-section-parent-wrapper">
         <div class="container hero-section-child-wrapper">
             <h3 class="heading">
